<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".news">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/todo"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="16dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/welcome"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/desc"
                android:layout_width="wrap_content"
                android:layout_height="5dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="16dp"
                android:maxLines="1"
                android:text="@string/desc" />

            <TextView
                android:id="@+id/source"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:drawablePadding="10dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif-light"
                android:text="@string/source"
                android:textColor="@color/colorTextTitle"
                android:textStyle="bold" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <Button
                    android:id="@+id/likeButton"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="35dp"
                    android:background="@drawable/like" />

                <TextView
                    android:id="@+id/likesayisi"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="27dp"
                    android:layout_marginEnd="10dp"
                    android:text=""
                    android:textColor="#606060" />

                <Button
                    android:id="@+id/dislikeButton"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="120dp"
                    android:layout_marginTop="35dp"
                    android:background="@drawable/dislike" />

                <TextView
                    android:id="@+id/dislikesayisi"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="135dp"
                    android:layout_marginEnd="10dp"
                    android:text=""
                    android:textColor="#606060" />

                <TextView
                    android:id="@+id/sayisi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="250dp"
                    android:layout_marginTop="35dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/g_r_nt_lenme_sayisi" />

                <TextView
                    android:id="@+id/view_count"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="250dp"
                    android:layout_marginTop="65dp"
                    android:text="" />
            </FrameLayout>
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/view_count"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/round_white"
                android:padding="5dp">

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:contentDescription="@string/to_do"
                    android:src="@drawable/ic_date" />

                <TextView
                    android:id="@+id/publishedAt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="27dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/_23_nisan_2019"
                    android:textColor="#606060" />
            </FrameLayout>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>