<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:entries="@array/HaberTürleri"
        tools:layout_editor_absoluteX="102dp"
        tools:layout_editor_absoluteY="16dp"></Spinner>


    <com.synnapps.carouselview.CarouselView
        android:id="@+id/carouselView"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="54dp"
        app:fillColor="#FFFFFFFF"
        app:pageColor="#00000000"
        app:radius="6dp"
        app:slideInterval="3000"
        app:strokeColor="#FF777777"
        app:strokeWidth="1dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="69dp" />

    <android.support.v7.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="241dp"
        android:layout_marginTop="220dp"
        android:layout_marginBottom="7dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/card"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/todo"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/kedi" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="200dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/title"
                    android:textAlignment="center"
                    android:textColor="@color/vpi__background_holo_dark"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:typeface="normal" />

                <TextView
                    android:id="@+id/desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/title"
                    android:text="@string/haberin_i_eri_i" />

                <TextView
                    android:id="@+id/publishedAt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/title"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:text=""
                    android:textColor="#606060" />
            </RelativeLayout>

        </FrameLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>